--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Candidata a Deputada Estadual Miriam Moret Freitas Lucena - 77123"
+      content="Candidata a Deputada Estadual Mirian Moret de Freitas Lucena - 77123"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Miriam Moret</title>
+    <title>Mirian Moret</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
